Vorlesung Promises und Fetch

--- a/site/index.html
+++ b/site/index.html
@@ -686,6 +686,9 @@
 <details class="question"><summary>Woche 3 - Promises und Fetch API</summary><ul>
 <li>Diese Woche betrachten wir den Lebenszyklus eines Service Workers, schauen uns Promises und die Fetch API an. In der Vorlesung wird ein Video erstellt, das hier hochgeladen wird. Die relevanten Abschnitte im Skript sind <a href="./serviceworker/#service-workers">Service Workers</a> und <a href="./promises/#promises-und-die-fetch-api">Promises und die Fetch-API</a>.</li>
 <li>Bearbeiten Sie bitte zu diesem Thema <a href="./uebungen/#ubung-3-promises-und-fetch-api">Übung 3</a>. </li>
+<li>Video zur Vorlesung am 05.05.2021
+    <iframe src="https://mediathek.htw-berlin.de/media/embed?key=71d02c5d395a874c9b2b4821a140dc7f&width=720&height=389&autoplay=false&autolightsoff=false&loop=false&chapters=false&related=false&responsive=false&t=0" data-src="" class="iframeLoaded" width="720" height="389" frameborder="0" allowfullscreen="allowfullscreen" allowtransparency="true" scrolling="no"></iframe></li>
+<li>Sourcecode zur Vorlesung am 05.05.2021 <a href="files/03_promise.zip">hier zum Herunterladen</a></li>
 </ul>
 </details>
                 
